# dbd

./: .dockerignore  LICENSE  README.md  docker-compose.e2e.yml  pyproject.toml
docker/: Dockerfile  bq_emulator_patch.pth  bq_emulator_patch.py
docker/e2e/: run.sh  run_job.py  seed_gcs.py
docker/e2e/sample-project/: dbt_project.yml
docker/e2e/sample-project/models/: hello.sql
src/dbd/: __init__.py  gcs.py  manager.py  models.py  profiles.py  worker.py
tests/: test_worker_dbt_flow.py
tests/dbt_project/: dbt_project.yml
