[project]
name = "dbd"
version = "0.1.0"
description = "data base daemon - run your dbt models via http"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "dbt-core>=1.8",
    "dbt-bigquery>=1.8",
    "dbt-sqlite>=1.4",
    "google-cloud-storage>=2.18",
    "pyyaml>=6.0",
]

[project.scripts]
dbd-manager = "dbd.manager:main"
dbd-worker = "dbd.worker:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "dbt-duckdb>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
